package decorator.tokennize;

import java.util.List;

public interface Tokennize {
    List<String> tokennize();
}
