@startuml
'https://plantuml.com/class-diagram


interface Tokennize{
    List<String> tokennize();
}

class TachTu{
    String s;
}

abstract TokenDecorator

Tokennize <|.. TachTu
Tokennize <|.. TokenDecorator
TokenDecorator --> Tokennize : token
TokenDecorator <|-- RemoveStopword
TokenDecorator <|-- RemovePunctuation
@enduml